# gtest-gcov-framework

./: CMakeLists.txt  LICENSE  README.md  build_gcovr.bat  build_test.bat  readme.md
coverage/: coverage.cal.cpp.1d58629648b54ed67cfa400bddb59517.html  coverage.functions.html  coverage.html  coverage.sample1.cpp.9d05ae03ea048279f697bb36c94b58bf.html  coverage.sample2.cpp.74d86c47ad89bad441655be6415d8f67.html
include/: cal.h
src/funcs/: cal.cpp  cal.cpp.gcov  cal.gcda  cal.gcno  sample1.cpp.gcov  sample1.gcda  sample1.gcno  sample2.cpp.gcov  sample2.gcda  sample2.gcno
src/main/: CMakeLists.txt  main.cpp
src/tests/: sample1_unittest.cpp  sample2_unittest.cpp  test1.cpp
